--- a/app/client/css/settings/colors.css
+++ b/app/client/css/settings/colors.css
@@ -1,49 +1,14 @@
 :root {
-  --text-color: #555;
-  --text-color-light: color(var(--text-color) tint(30%));
-  --text-color-lighter: color(var(--text-color) tint(60%));
-  --text-color-lightest: color(var(--text-color) tint(90%));
-  --text-color-dark: color(var(--text-color) shade(30%));
-  --text-color-darker: color(var(--text-color) shade(60%));
-  --text-color-darkest: color(var(--text-color) shade(90%));
-  --primary-color: #00afd6;
-  --primary-color-dark: color(var(--primary-color) shade(30%));
-  --primary-color-darker: color(var(--primary-color) shade(60%));
-  --primary-color-darkest: color(var(--primary-color) shade(90%));
-  --primary-color-light: color(var(--primary-color) tint(10%));
-  --primary-color-lighter: color(var(--primary-color) tint(35%));
-  --primary-color-lightest: color(var(--primary-color) tint(60%));
-  --secondary-color: #ef3304;
-  --secondary-color-dark: color(var(--secondary-color) shade(30%));
-  --secondary-color-darker: color(var(--secondary-color) shade(60%));
-  --secondary-color-darkest: color(var(--secondary-color) shade(90%));
-  --secondary-color-light: color(var(--secondary-color) tint(30%));
-  --secondary-color-lighter: color(var(--secondary-color) tint(60%));
-  --secondary-color-lightest: color(var(--secondary-color) tint(90%));
-  --neutral-color: #ddd;
-  --neutral-color-light: color(var(--neutral-color) tint(30%));
-  --neutral-color-lighter: color(var(--neutral-color) tint(60%));
-  --neutral-color-lightest: color(var(--neutral-color) tint(90%));
-  --neutral-color-dark: color(var(--neutral-color) shade(20%));
-  --neutral-color-darker: color(var(--neutral-color) shade(40%));
-  --neutral-color-darkest: color(var(--neutral-color) shade(60%));
-  --dark-color: #222;
-  --dark-color-light: color(var(--dark-color) tint(20%));
-  --dark-color-lighter: color(var(--dark-color) tint(40%));
-  --dark-color-lightest: color(var(--dark-color) tint(60%));
-  --dark-color-dark: color(var(--dark-color) shade(20%));
-  --dark-color-darker: color(var(--dark-color) shade(40%));
-  --dark-color-darkest: color(var(--dark-color) shade(60%));
-  --alert-color: #c40000;
-  --alert-color-dark: #b00000;
-  --alert-color-darker: color(var(--alert-color) shade(40%));
-  --alert-color-darkest: color(var(--alert-color) shade(60%));
-  --success-color: #00b548;
-  --success-color-dark: color(var(--success-color) shade(30%));
-  --success-color-darker: color(var(--success-color) shade(60%));
-  --success-color-darkest: color(var(--success-color) shade(60%));
-  --warning-color: #ffc107;
-  --warning-color-dark: color(var(--warning-color) shade(30%));
-  --warning-color-darker: color(var(--warning-color) shade(40%));
-  --warning-color-darkest: color(var(--warning-color) shade(60%));
+  --color--beige: #D4BB96;
+  --color--blue: #01304A;
+  --color--crimson: #B00000;
+  --color--dark-gray: #333;
+  --color--fog: #DDD;
+  --color--forest-green: #006F2D;
+  --color--graphite: #151515;
+  --color--green: #00B548;
+  --color--gray: #555;
+  --color--light-gray: #777;
+  --color--red: #B00000;
+  --color--white: #FFF;
 }
